2001-04-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* Documentation/gsdoc/NSFunctions.gsdoc: Documented
	GSDebugAllocation* functions.
	* Documentation/gsdoc/NSRecursiveLock.gsdoc: Fixed syntax error.
	* Documentation/gsdoc/*.html: Regenerated.
	
2001-04-19  Nicola Pero  <nicola@brainstorm.co.uk>

	To help with debugging memory leaks, you can now ask to the
	library to track all allocated instances of a certain class.
	* Source/NSDebug.m (table_entry): Added fields to allow recording
	the list of allocated instances if required.
	(GSDebugAllocationActiveRecordingObjects): New function.  
	(GSDebugAllocationAdd): Modified to take an additional argument -
	the object being allocated -, and to record it in the list of
	instances for the class if recording instances of that class has
	been activated.
	(GSDebugAllocationRemote): Add a similar additional argument;
	remove the object from the list of instances if recording
	instances is activated.
	(GSDebugAllocationListRecordedObjects): New function.
	* Source/NSObject.m: Updated all occurrences of
	GSDebugAllocationAdd and GSDebugAllocationRemove to pass the 
	allocated/removed object as well.
	* Headers/gnustep/base/NSDebug.h: Updated.

2001-04-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/GSTcpPort.m ([GSTcpPort -dealloc]): Fixed memory leak:
	release address string.

2001-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Tidied code a little, added safety checks for
	usePseudoTerminal method.
	* Source/NSData.m: ([writeToFile:atomically:]) create new files
	with permission 0644 modified by umask.
	Init tmppath for MINGW.
	* Tools/gsdoc.m: Use memory management macros and attempt to get
	back to something like conformance with coding standards.
	* Documentation/gsdoc/NSTask.gsdoc: documentation fleshed out.

2001-04-16  Adam Fedor  <fedor@gnu.org>

	* aclocal.m4: Detect the xm2-config script.

2001-04-14  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
